# integrations

./: CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  requirements.txt  robots.txt
blatant-why/: .env.example  .gitignore  .npmignore  CLAUDE.md  README.md  package-lock.json  package.json  plugin-manifest.json  pyproject.toml  tsconfig.init.json
blatant-why/.claude/: settings.json
blatant-why/.claude/commands/: results.md  screen.md  status.md  watch.md
blatant-why/.claude/skills/boltzgen/: SKILL.md
blatant-why/.claude/skills/protenix/: SKILL.md
blatant-why/.claude/skills/proteus-campaign-manager/: SKILL.md
blatant-why/.claude/skills/proteus-campaign-optimizer/: SKILL.md
blatant-why/.claude/skills/proteus-database/: SKILL.md
blatant-why/docs/: LOCAL_GPU_SETUP.md
blatant-why/examples/pdl1-binder/: config.yaml
blatant-why/examples/tnfa-vhh/: config.yaml
blatant-why/examples/tnfa-vhh-local/: config.yaml
blatant-why/examples/tnfa-vhh-ssh/: config.yaml
blatant-why/src/init-cli/: api-keys.ts  index.ts  init.ts  templates.ts  verify.ts
blatant-why/src/proteus_cli/: __init__.py  antibody.py  common.py  fold.py  main.py  protein.py  ssh_runner.py
blatant-why/templates/: .gitignore-append  CLAUDE.md
blatant-why/templates/.by/: config.json
blatant-why/tests/: test_alignment.py  test_antibody.py  test_common.py  test_config.sh  test_cross_validation.py  test_e2e.py  test_fold.py  test_init.sh  test_ipsae_compute.py  test_ipsae_scoring.py  test_main.py  test_mcp_servers.sh  test_pareto.py  test_protein.py  test_screening.py
src/: hub.py  (+1 more)
(+115 files in other folders)
